Fix spacing

--- a/src/pages/Company/MyJobApplications/styles.module.scss
+++ b/src/pages/Company/MyJobApplications/styles.module.scss
@@ -6,6 +6,10 @@
   }
 }
 
+.title {
+  margin-bottom: $spacing-xl;
+}
+
 .fetchMore {
   margin-top: $spacing-l;
 }
